animaçoes com js

--- a/nlw/index.html
+++ b/nlw/index.html
@@ -122,7 +122,7 @@
 
     <!--TESTIMONIALS-->
     <section class="section" id="testimonials">
-      <div class="container grid">
+      <div class="container">
         <header>
           <h2>Depoimentos de quem ja passou por aqui</h2>
         </header>
@@ -166,7 +166,7 @@
                 </cite>
               </blockquote>
             </div> 
-          </div>
+            </div>
 
            <!-- If we need pagination -->
            <div class="swiper-pagination"></div>
@@ -175,13 +175,39 @@
 
     </section>
    
-   <!-- swiper -->
-   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    
-    <!-- scrollreveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <div class="divider-2"></div>
 
     <!--CONTACTS-->
+    <section class="section" id="contact">
+      <div class="container grid">
+        <div class="text">
+          <h2 class="title">Entre em contato com a gente!</h2>
+        </div>
+        <p>
+          Entre em contato com a Beuatysalon, queremos tirar suas dúvidas, ouvir suas criticas e sugestões.
+        </p>
+        <a href="#" class="button"><i class="icon-whatsapp"></i> Entrar em contato</a>
+      </div>
+
+      <div class="links">
+        <ul>
+          <li><i class="icon-phone"></i>11 0101010-010101</li>
+          <li><i class="icon-map-pin"></i>R. São Paulo, 01</li>
+          <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+        </ul>
+      </div>
+    </section>
+
+
+
+
+
+
+   <!-- swiper -->
+   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- scrollreveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    
     <script src="main.js"></script>
   </body>
 </html>
